# app/Http/Controllers/JobsController.php
@@ -5,29 +5,57 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use PhpParser\Node\Stmt\Catch_;
 use App\Models\Jobs;
+
+use App\Helpers\ResponseFormatter;
+use Illuminate\Support\Facades\DB;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Database\Eloquent\Builder;
+
+use App\Http\Resources\JobsResource;
+use App\Interfaces\JobsInterface;
 class JobsController extends Controller
 {
+    private $jobsInterface;
+    public function __construct(JobsInterface $jobsInterface)
+    {
+        $this->jobsInterface = $jobsInterface;
+    }
+
     /**
      * Display a listing of the resource.
      *
      * @return \Illuminate\Http\Response
      */
    
-    public function index()
+     /**
+     * @OA\Get(
+     *   tags={"API|DATA|INDEX JOBS"},
+     *   path="/api/jobs",
+     *   summary="Jobs index",
+     *     @OA\Parameter(
+     *     name="search",
+     *     in="query",
+     *     @OA\Schema(type="string")
+     *   ),
+     *   @OA\Response(response="default", ref="#/components/responses/globalResponse")
+     * )
+     */
+
+    public function index(Request $request)
     {
-        //
-        try{
-            return response()->json([
-                'success' => true,
-                'message' => 'list data jobs',
-                'data' =>  Jobs::all()
-            ], 200);
-        }catch(\Exception $e){
-            return response()->json([
-                'success' => false,
-                'message' => $e->getMessage()
-            ], 404);
-        }
+        $jobs = $this->jobsInterface->getAll(
+            select: [
+                'id',
+                'id_hash',
+                'name',
+                'created_at',
+                'updated_at'
+            ],
+            search: function (Builder $query) use ($request) {
+                $query->where('name', 'LIKE', "%{$request->search}%");
+            }
+        );
+        return ResponseFormatter::success($jobs, 'Data berhasil ditampilkan');
     }
 
     /**
